namespace server.domain.chat;

public enum ChatMessageSenderType
{
    Player = 1,
    System = 2
}
